VERSION 5.0.7
=============

* ADDED: Compatibility to SWI-Prolog 3.3.0 (More ISO stuff)

* ADDED: `vector->for_all' and other vector-iteration methods now accept
  optional `from' and `to' to limit the range and/or enumerate backwards.

* ADDED: `chain->for_all' and other chain-iteration methods now pass the
  index of the current element in @arg2 for compatibility to class vector.
  Suggested by Uwe Lesta.

* FIXED: `vector->insert' (reference-count problem). Thanks to Uwe Lesta.

* FIXED: documentation of `list_browser->select_message'.  Thanks to
  Laurens van der Meij.

* FIXED: spypce(class<-getmethod).  Thanks to Uwe Lesta.

* FIXED: Added resource declaration to the kangaroo demo.

* FIXED: pce_pre_expand/2 to handle pce_pre_expansion_hook/2 if it returns
  a list.  Thanks to Uwe Lesta.

VERSION 5.0.6
=============

* PORTABILITY: Integrated many patches for compilation using egcs-1.1.1 on
  DEC/Alpha running OSF/1 4.0.  Most general 64-bit problems detected by
  the compiler.

* FIXED: Updated INSTALL.notes to be the same as the much more up-to-date
  INSTALL.src from the distribution directory.

* FIXED: drawing transparent text in Windows metafiles.  It appears diagrams
  can be properly transferred to Office 97 and compatible applications using
  the `EMF' format.  EMF is now the default format for PceDraw.

* FIXED: reporting errors for type-errors on var-arg methods.  Thanks to
  Lourens van der Meij.

* FIXED/MODIFIED: If a popup is appended to another popup (for creating
  a pull-right-menu), the `menu_item<-value' of the created menu-item
  is now the <-name of the popup rather then the <-label.  This makes
  <-member work consistent.  Reported by Lourens van der Meij.

* FIXED: UserGuide section on using hyperlinks.  Thanks to Uwe Lesta.

* FIXED: Various cleanup, adding declarations, etc. to get the XPCE/Prolog
  library running under SICStus.

VERSION 5.0.5
=============
