@@ -100,6 +100,13 @@ AC_ARG_ENABLE(passwd, [  --enable-passwd	  Password protected version],
 		        licence=yes ;;
 		   no)  licence=no ;;
 	       esac])
+AC_ARG_ENABLE(mt, [  --enable-mt		  Enable Multi-threading],
+	      [case "$enableval" in
+		   yes) AC_DEFINE(_REENTRANT)
+			;;
+		   *)  ;;
+	       esac])
+
 
 if test -z "$PWD"; then
   PWD=`pwd`
