@@ -7,7 +7,7 @@ Vendor:		SWI, University of Amsterdam
 Source:		xpce-@VMAJOR@.@VMINOR@.@VPATCH@.tar.gz
 Url:		http://www.swi.psy.uva.nl/projects/xpce/
 Group:		Development/Languages
-Requires:	pl >= 3.2.6
+Requires:	pl >= 3.3.0
 Prefix:		/usr
 BuildRoot:	/var/tmp/xpce
 
@@ -50,7 +50,7 @@ make rpm-install prefix=$RPM_BUILD_ROOT/usr
 /usr/man/man1/xpce-client.1
 
 %post
-PATH="$RPM_INSTALL_PREFIX/bin:$PATH"
+PATH="$RPM_INSTALL_PREFIX/bin:/usr/bin:/usr/local/bin:$PATH"
 eval `pl -dump-runtime-variables`
 cd $PLBASE
 ln -s $RPM_INSTALL_PREFIX/lib/xpce-%pceversion xpce
@@ -60,7 +60,7 @@ cp xpce/pl/Makefile .
 make -f Makefile
 cd $RPM_INSTALL_PREFIX/bin
 rm -f xpce
-ln -s $PLBASE/bin/%arch/pl xpce
+ln -s $PLBASE/bin/$PLARCH/pl xpce
 
 %preun
 rm -f `find $RPM_INSTALL_PREFIX/lib/xpce-%pceversion -name '*.qlf'`
@@ -69,7 +69,7 @@ rm -f $RPM_INSTALL_PREFIX/lib/xpce-%pceversion/prolog/lib/INDEX.pl
 rm -f $RPM_INSTALL_PREFIX/lib/xpce-%pceversion/prolog/lib/.pwd
 
 %postun
-PATH="$RPM_INSTALL_PREFIX/bin:$PATH"
+PATH="$RPM_INSTALL_PREFIX/bin:/usr/bin:/usr/local/bin:$PATH"
 eval `pl -dump-runtime-variables`
 cd $PLBASE
 rm -f xpce pl.rc xpce.rc Makefile
